--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,8 +1,7 @@
-version: '3.8'
 
 services:
   glauth:
-    image: ubuntu/glauth:2-22.04_stable
+    image: glauth/glauth
     container_name: glauth
     restart: unless-stopped
     ports:
@@ -10,11 +9,10 @@ services:
       - "3894:3894"  # LDAPS port
       - "5555:5555"  # API port (optional)
     volumes:
-      - ./glauth.cfg:/app/config/glauth.cfg:ro
+      - ./glauth.cfg:/app/config/config.cfg:ro
       - ./certs/glauth.crt:/app/config/glauth.crt:ro
       - ./certs/glauth.key:/app/config/glauth.key:ro
     working_dir: /app/config
-    command: ["-c", "/app/config/glauth.cfg"]
     networks:
       - glauth-network
 
